# mkjson

./: .gitignore  ChangeLog.md  LICENSE  README.md  azure-pipelines.yml  mkjson.cabal  package.yaml  stack.yaml
.github/workflows/: ci.yaml
app/: Main.hs
benchmarks/: bench.hs
src/: Aeson.hs  Cli.hs  Expr.hs  Fake.hs  ObjectGroups.hs
tests/: doctests.hs
